# HomographySamples

./: README.md
1_pose_estimation/0_initial_example/: CMakeLists.txt  main.cpp
1_pose_estimation/1_points/: CMakeLists.txt  main.cpp
1_pose_estimation/2_chessboard_pattern_generator/: CMakeLists.txt  main.cpp
1_pose_estimation/3_circles_pattern_generator/: CMakeLists.txt  main.cpp
2_perspective_correction/0_initial_example/: main.cpp
2_perspective_correction/1_example/: main.cpp
3_homography_camera_displacement/0_initial_example/: main.cpp
5_basic_panorama_stitching_rotating_camera/0_initial_example/: main.cpp
6_exposure_fusion/: README.md
6_exposure_fusion/0_initial_example/: main.cpp
6_exposure_fusion/1_feat_warp/: CMakeLists.txt
6_exposure_fusion/1_feat_warp/include/: library.h
6_exposure_fusion/1_feat_warp/private_include/: cTRegressions.h  common.h
6_exposure_fusion/1_feat_warp/src/: cTRegressions.cpp  imgconversion.c  library.cpp
6_exposure_fusion/2_most_feat_warp/: CMakeLists.txt
6_exposure_fusion/2_most_feat_warp/include/: cTJpeg.h
6_exposure_fusion/2_most_feat_warp/private_include/: cTFeatureSegmentContainer.h  cTFeatureSegmentContainerImpl.h  cTMostFeatureDetector.h  cTMostFeatureDetectorImpl.h  cTMostFeatureDetectorOast.h  gamma.h  klt.h  sad_86.h
6_exposure_fusion/2_most_feat_warp/private_include/Test/: GlobalWarps_irls_huber.h  GlobalWarps_irls_ok.h  GlobalWarps_old1.h  GlobalWarps_old2.h
6_exposure_fusion/2_most_feat_warp/private_include/Test/ImageGridWarp/: ImageGridWarp.h
6_exposure_fusion/2_most_feat_warp/private_include/Test/Math/: Matrix.h  Quaternion.h  Vector.h  choleski_impl.h
6_exposure_fusion/2_most_feat_warp/src/: cTBruteSad.cpp  cTJpeg.cpp  common.cpp  fuse.cpp  gamma.cpp  klt.cpp  library.cpp  library_LoG.cpp  library_SAD_fullres.cpp  library_SAD_qvga2fullres.cpp  library_bluraver.cpp  library_blurgauss.cpp  library_bright2dark.cpp  library_debug_exposure_ratio_mult.cpp  library_feats_qvga_searchmatch.cpp  library_qvga2high_feats.cpp  library_ref2sample.cpp  library_sample2ref.cpp  library_test_unfinished.cpp
6_exposure_fusion/2_most_feat_warp/src/test/ImageGridWarp/: ImageGridWarp.c
6_exposure_fusion/2_most_feat_warp/src/test/ImageGridWarp/private_include/: ImageGridWarpAffine.h  warpedGridIndex.h
6_exposure_fusion/3_new_feat_warp/: CMakeLists.txt  main.cpp
6_exposure_fusion/3_new_feat_warp/private_include/Test/: CoreCommon.h  GlobalWarps.h  GlobalWarps_debug.h  GlobalWarps_irls_cauchy.h  GlobalWarps_irls_huber_ok.h  GlobalWarps_irls_old.h  Time.h
6_exposure_fusion/3_new_feat_warp/private_include/Test/Math/: MathCommon.h  Versor.h  choleski.h
6_exposure_fusion/3_new_feat_warp/src/: library.cpp  library_ocv.cpp  library_ocvlmeds.cpp  library_ok.cpp  library_ok2.cpp  library_old.cpp  library_old2.cpp  native.cpp
6_exposure_fusion/3_new_feat_warp/src/test/ImageGridWarp/: ImageGridWarpAffine.c  warpedGridIndex.c  warpedGridToUniform.c
6_exposure_fusion/3_new_feat_warp/src/test/ImageGridWarp/private_include/: ImageGridWarpPrv.h  warpedGridToUniform.h
6_exposure_fusion/4_sad/: CMakeLists.txt  main.cpp
6_exposure_fusion/4_sad/include/: cTBruteSad.h  cTImg.h  klt.h  sad_86.h
6_exposure_fusion/4_sad/private_include/: cTFeatureSegmentContainer.h  cTFeatureSegmentContainerImpl.h  cTMostFeatureDetector.h  cTMostFeatureDetectorImpl.h  imgconversion.h
6_exposure_fusion/4_sad/src/: imgconversion.c  sad_86.c
6_exposure_fusion/5_hdr_sim/: CMakeLists.txt  main.cpp
6_exposure_fusion/5_hdr_sim/Align/: CMakeLists.txt
6_exposure_fusion/5_hdr_sim/Align/include/: cTJpeg.h  library.h
6_exposure_fusion/5_hdr_sim/Align/private_include/: common.h  fuse.h
6_exposure_fusion/5_hdr_sim/Align/src/: cTJpeg.cpp  cTRegressions.cpp  library.cpp
6_exposure_fusion/5_hdr_sim/include/: interface_hdr.h
6_exposure_fusion/5_hdr_sim/rHDR/: CMakeLists.txt
6_exposure_fusion/5_hdr_sim/rHDR/aux/: proc_img.c
6_exposure_fusion/5_hdr_sim/rHDR/data/: pix_val_weight.txt  rhdr_indata_file.txt
6_exposure_fusion/5_hdr_sim/rHDR/inc/: rhdr.h
6_exposure_fusion/5_hdr_sim/rHDR/include/: rhdr_interface.h
6_exposure_fusion/5_hdr_sim/rHDR/private_include/: rhdr_interface_priv.h
6_exposure_fusion/5_hdr_sim/rHDR/src/: rhdr.c  rhdr_interface.cpp  rhdr_interface_priv.cpp  rhdr_prv.h
6_exposure_fusion/5_hdr_sim/src/: interface_hdr.cpp
6_exposure_fusion/6_fusion_test/: CMakeLists.txt  README.md  example_awbinfo_format.awbout  hdr_gamma_lin.txt  hdr_gamma_temp.txt  main.c
6_exposure_fusion/6_fusion_test/rhdr_lib/include/: proc_img.h  rhdr.h
6_exposure_fusion/6_fusion_test/rhdr_lib/src/: proc_img.c  rhdr.c
6_exposure_fusion/6_fusion_test/rhdr_lib/src/private_include/: rhdr_prv.h
